--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="referrer" content="always">
     <meta name="keywords" content="freeCodeCamp 开发者社区 互联网行业技术 人才">
     <meta name="description" content="">
-    <title>freeCodeConf</title>
+    <title>freecodecamp 城市社区</title>
     <script src="./third-party/vue.min.js"></script>
     <link rel="stylesheet" href="./freecodecamp.one/css/style.css?v=1.2">
   </head>
