--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="content">
           <p class="list_head">社区组织者</p>
           <div class="lists">
-            <div class="list_item" v-for="(orger, index) of organiser" :key="index">
+            <div class="list_item" v-for="(orger, index) of organiser" :key="index" v-if="index<organiserCount">
               <a :href="orger.link">
                 <div class="img_content">
                   <div>
@@ -60,11 +60,12 @@
               </a>
             </div>
           </div>
+          <div @click="organiserMore" v-if="organiser.length>10 && organiser.length>organiserCount" class="more_item">More</div>
         </div>
         <div class="content" v-if="speakers.length>0">
           <p class="list_head">演讲嘉宾</p>
           <div class="lists">
-            <div class="list_item" v-for="(speaker, index) of speakers" :key="index">
+            <div class="list_item" v-for="(speaker, index) of speakers" :key="index" v-if="index<speakersCount">
               <a :href="speaker.link">
                 <div class="img_content">
                   <div>
@@ -75,6 +76,7 @@
               </a>
             </div>
           </div>
+          <div @click="organiserMore" v-if="speakers.length>10 && speakers.length<speakersCount" class="more_item">More</div>
         </div>
         <div class="content" v-if="co_company.length>0">
           <p class="list_head">合作企业</p>
@@ -110,12 +112,22 @@
             banner: city.banner,
             organiser: city.organiser,
             co_company: city.co_company,
-            speakers: city.speakers
+            speakers: city.speakers,
+            organiserCount: 10,
+            speakersCount: 10
           },
           computed: {
             picPrefix:function(){
               var located = window.location.origin;
               return located + '/' + city.picPrefix;
+            }
+          },
+          methods: {
+            speakersMore:function(){
+              this.speakersCount +=10;
+            },
+            organiserMore:function(){
+              this.organiserCount +=10;
             }
           }
         });
